[tool.poetry]
name = "golosscripts"
version = "1.0.0"
description = "Scripts for Golos blockchain"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bitfag/golos-scripts"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.1"
python-golos = "^1.0.0"
bitsharesscripts = "^2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
