[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "golosscripts"
version = "0.3.2"
description = "Scripts for Golos blockchain"
license = "MIT"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
readme = "README.md"
repository = "https://github.com/bitfag/golos-scripts"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
python-golos = "^1.0.0"
bitsharesscripts = "^2"
ccxt = "^1.26.96"
defusedxml = "^0.6.0"
bitshares = "^0.5.1"
graphenelib = "^1.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^5.4.1"
pytest-asyncio = "^0.11.0"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^2.2"
sphinx-autoapi = "^1.3.0"
# used in docs to include markdown files
m2r = "^0.2"
# used in docs to parse pyproject.toml
tomlkit = "^0.6"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
